--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,11 @@
 
     <description>MSSC Beer Inventory Service</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
