--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.artemis.password=simetraehcapa
 
 logging.level.guru.springframework=debug
 
-spring.zipkin.baseUrl= http://localhost:9411/
+spring.zipkin.enabled=false
