--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.zipkin.enabled=false
 
 spring.security.user.name=good
 spring.security.user.password=beer
+
+# Spring Data hangs when set to deferred under Spring Boot 2.3.0
+spring.data.jpa.repositories.bootstrap-mode=default
